--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
+  border: none;
+  outline: none;
+  transition: 0.3s;
 }
 :root
 {
@@ -24,7 +27,10 @@ body
 }
 main
 {
-  width: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .text-block-section
 {
@@ -44,4 +50,45 @@ main
   font-size: 16px;
   line-height: 26px;
   color: var(--white-clr);
+}
+.form-section
+{
+  width: 50%;
+  background-color: red;
+}
+.form-section form
+{
+  width: fit-content;
+  background-color: var(--white-clr);
+  padding: 40px;
+  border-radius: 6px;
+  box-shadow: 0 8px 0 0 #0000001e;
+}
+.form-section button
+{
+  background-color: var(--green-clr);
+  color: var(--white-clr);
+  width: 100%;
+  height: 56px;
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-bottom: 24px;
+  margin-top: 36px;
+  display: block;
+}
+.form-section button:hover
+{
+  background-color: #77E2B3;
+  box-shadow: 0 -4px 0 0 #00000013;
+}
+.form-section form .input-box
+{
+  width: fit-content;
+  position: relative;
+}
+.form-section form .input-box input
+{
+  width: 100%;
 }
