--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ main
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 45px;
 }
 .text-block-section
 {
@@ -75,7 +76,6 @@ main
   font-weight: 600;
   letter-spacing: 1px;
   margin-bottom: 24px;
-  margin-top: 36px;
   display: block;
 }
 .form-section button:hover
@@ -85,10 +85,23 @@ main
 }
 .form-section form .input-box
 {
-  width: fit-content;
+  width: 100%;
   position: relative;
 }
 .form-section form .input-box input
 {
   width: 100%;
+  border: 1px solid #DEDEDE;
+  height: 56px;
+  padding-left: 32px;
+  margin-bottom: 30px;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.25px;
+  border-radius: 6px;
+  color: #3D3B48;
+}
+.form-section form .input-box input:focus
+{
+  border: 1px solid var(--purple-clr);
 }
