--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,15 @@ main
 {
   color: var(--pink-clr);
 }
+.form-section .fa-solid
+{
+  position: absolute;
+  right: 28px;
+  top: 16px;
+  font-size: 24px;
+  color: var(--pink-clr);
+}
+.form-section form .input-box input.invalid
+{
+  border: 1px solid red;
+}
