--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ main
 }
 .form-section form
 {
-  width: fit-content;
+  width: 100%;
   background-color: var(--white-clr);
   padding: 40px;
   border-radius: 6px;
@@ -141,6 +141,20 @@ main
 {
   color: red;
   position: absolute;
-  top: -20px;
+  top: 60px;
   right: 0;
+}
+.form-section .try-free
+{
+  background-color: var(--purple-clr);
+  width: 100%;
+  padding: 17px;
+  margin-bottom: 24px;
+  border-radius: 6px;
+  box-shadow: 0 8px 0 0 #00000019;
+}
+.form-section .try-free p
+{
+  color: var(--white-clr);
+  text-align: center;
 }
