--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,16 @@ main {
     margin-top: 200px;
   }
 }
+::-webkit-scrollbar
+{
+  display: block;
+  width: 8px;
+}
+::-webkit-scrollbar-thumb
+{
+  background-color: var(--pink-clr);
+}
+::-webkit-scrollbar-track
+{
+  background-color: var(--white-clr);
+}
